# code-reviewer

./: .gitignore  README.md  Test.md  pyproject.toml
src/code_reviewer/: __main__.py  cli.py  display.py  hook.py  reviewer.py
tests/: test_reviewer.py
