[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-reviewer"
version = "0.1.0"
description = "AI-powered terminal code reviewer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
cr = "code_reviewer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]
